# random-food

./: Cargo.toml  PKGBUILD  README.md
src/: args.rs  crawler.rs  lib.rs  main.rs  store.rs
src/crawler/: releases.rs
