[package]
name = "random-food"
version = "0.1.0"
edition = "2024"
description = "一个随机食物生成器"
authors = ["leessmin"]
license = "GNU General Public License v3.0"
license-file = "LICENSE.txt"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
regex = { version = "1.12.3" }
clap = { version = "4.6.0", features = ["derive"] }
rand = { version = "0.10.0" }
