[package]
name = "random-food"
version = "0.1.0"
edition = "2024"
description = "一个随机食物生成器"
authors = ["leessmin"]
license-file = "LICENSE.txt"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
regex = { version = "1.12.3" }
clap = { version = "4.6.0", features = ["derive"] }
rand = { version = "0.10.0" }
serde_json = { version = "1.0.149" }
serde = { version = "1.0.228", features = ["derive"] }
whoami = { version = "2.1.1" }
dirs = { version = "6.0.0" }
